website/versioned_docs/version-57.1.0/reference/generated/api/README.md
## Classes

- [APIError](classes/APIError.md)
- [BadRequestError](classes/BadRequestError.md)
- [BetterAuthApp](classes/BetterAuthApp.md)
- [CachingSecretProvider](classes/CachingSecretProvider.md)
- [CompositeSecretProvider](classes/CompositeSecretProvider.md)
- [ConfigurationApp](classes/ConfigurationApp.md)
- [ConflictError](classes/ConflictError.md)
- [ConsentApp](classes/ConsentApp.md)
- [DateOnly](classes/DateOnly.md)
- [EnvSecretProvider](classes/EnvSecretProvider.md)
- [ExecutorConflictError](classes/ExecutorConflictError.md)
- [ForbiddenError](classes/ForbiddenError.md)
- [GcpSecretProvider](classes/GcpSecretProvider.md)
- [InternalServerError](classes/InternalServerError.md)
- [MissingScopeResolverError](classes/MissingScopeResolverError.md)
- [NotFoundError](classes/NotFoundError.md)
- [OpenApiMiddlewareBuilder](classes/OpenApiMiddlewareBuilder.md)
- [RealtimeApp](classes/RealtimeApp.md)
- [SyncApp](classes/SyncApp.md)
- [TaskCancelledError](classes/TaskCancelledError.md)
- [TerrenoApp](classes/TerrenoApp.md)
- [UnauthorizedError](classes/UnauthorizedError.md)
- [ValidationError](classes/ValidationError.md)
- [VersionCheckPlugin](classes/VersionCheckPlugin.md)

## Interfaces

- [AccessCheckArgs](interfaces/AccessCheckArgs.md)
- [AccessOptions](interfaces/AccessOptions.md)
- [AccessResult](interfaces/AccessResult.md)
- [ActionContext](interfaces/ActionContext.md)
- [AdminAction](interfaces/AdminAction.md)
- [AdminChangeEvent](interfaces/AdminChangeEvent.md)
- [AdminConfig](interfaces/AdminConfig.md)
- [AdminContribution](interfaces/AdminContribution.md)
- [AdminCustomScreen](interfaces/AdminCustomScreen.md)
- [AdminFieldOverride](interfaces/AdminFieldOverride.md)
- [AdminFieldset](interfaces/AdminFieldset.md)
- [AdminFilterBoolean](interfaces/AdminFilterBoolean.md)
- [AdminFilterChoice](interfaces/AdminFilterChoice.md)
- [AdminFilterDateRange](interfaces/AdminFilterDateRange.md)
- [AdminFilterRef](interfaces/AdminFilterRef.md)
- [AdminFilterText](interfaces/AdminFilterText.md)
- [AdminHomeConfig](interfaces/AdminHomeConfig.md)
- [AdminHomeSlots](interfaces/AdminHomeSlots.md)
- [AdminHomeWidgetContribution](interfaces/AdminHomeWidgetContribution.md)
- [AdminModelContribution](interfaces/AdminModelContribution.md)
- [AdminModelPermissions](interfaces/AdminModelPermissions.md)
- [AdminScriptContribution](interfaces/AdminScriptContribution.md)
- [APIErrorBody](interfaces/APIErrorBody.md)
- [APIErrorOptions](interfaces/APIErrorOptions.md)
- [AsyncHandlerOptions](interfaces/AsyncHandlerOptions.md)
- [AuthenticatableSocket](interfaces/AuthenticatableSocket.md)
- [AuthenticatedClient](interfaces/AuthenticatedClient.md)
- [AuthOptions](interfaces/AuthOptions.md)
- [AuthorizedEmitEntry](interfaces/AuthorizedEmitEntry.md)
- [BackfillAdminsOptions](interfaces/BackfillAdminsOptions.md)
- [BackfillAdminsResult](interfaces/BackfillAdminsResult.md)
- [BackgroundTaskDocument](interfaces/BackgroundTaskDocument.md)
- [BackgroundTaskMethods](interfaces/BackgroundTaskMethods.md)
- [BackgroundTaskModel](interfaces/BackgroundTaskModel.md)
- [BackgroundTaskStatics](interfaces/BackgroundTaskStatics.md)
- [BaseUser](interfaces/BaseUser.md)
- [BetterAuthAppOptions](interfaces/BetterAuthAppOptions.md)
- [BetterAuthConfig](interfaces/BetterAuthConfig.md)
- [BetterAuthOAuthProvider](interfaces/BetterAuthOAuthProvider.md)
- [BetterAuthSession](interfaces/BetterAuthSession.md)
- [BetterAuthSessionData](interfaces/BetterAuthSessionData.md)
- [BetterAuthSocketOptions](interfaces/BetterAuthSocketOptions.md)
- [BetterAuthUser](interfaces/BetterAuthUser.md)
- [CachingSecretProviderOptions](interfaces/CachingSecretProviderOptions.md)
- [ChangeStreamConfig](interfaces/ChangeStreamConfig.md)
- [CollectionActionConfig](interfaces/CollectionActionConfig.md)
- [CompactTombstonesResult](interfaces/CompactTombstonesResult.md)
- [ConfigRegistration](interfaces/ConfigRegistration.md)
- [ConfigurationAppOptions](interfaces/ConfigurationAppOptions.md)
- [ConfigurationMetaResponse](interfaces/ConfigurationMetaResponse.md)
- [ConfigurationModel](interfaces/ConfigurationModel.md)
- [ConfigurationPermissions](interfaces/ConfigurationPermissions.md)
- [ConfigurationPluginOptions](interfaces/ConfigurationPluginOptions.md)
- [ConfigurationStatics](interfaces/ConfigurationStatics.md)
- [ConsentAppOptions](interfaces/ConsentAppOptions.md)
- [ConsentFormCheckbox](interfaces/ConsentFormCheckbox.md)
- [ConsentFormDefinition](interfaces/ConsentFormDefinition.md)
- [ConsentFormDocument](interfaces/ConsentFormDocument.md)
- [ConsentFormModel](interfaces/ConsentFormModel.md)
- [ConsentFormStatics](interfaces/ConsentFormStatics.md)
- [ConsentResponseDocument](interfaces/ConsentResponseDocument.md)
- [ConsentResponseMethods](interfaces/ConsentResponseMethods.md)
- [ConsentResponseModel](interfaces/ConsentResponseModel.md)
- [ConsentResponseStatics](interfaces/ConsentResponseStatics.md)
- [CreateAuthenticatedClientOptions](interfaces/CreateAuthenticatedClientOptions.md)
- [CreateBetterAuthOptions](interfaces/CreateBetterAuthOptions.md)
- [CreatedDeleted](interfaces/CreatedDeleted.md)
- [CreateFeatureFlaggedLoggerOptions](interfaces/CreateFeatureFlaggedLoggerOptions.md)
- [CreateScopedLoggerOptions](interfaces/CreateScopedLoggerOptions.md)
- [CreateValidatorOptions](interfaces/CreateValidatorOptions.md)
- [DecodedRealtimeToken](interfaces/DecodedRealtimeToken.md)
- [DocumentSubscription](interfaces/DocumentSubscription.md)
- [ExecutorResult](interfaces/ExecutorResult.md)
- [FieldMask](interfaces/FieldMask.md)
- [FindExactlyOnePlugin](interfaces/FindExactlyOnePlugin.md)
- [FindOneOrNonePlugin](interfaces/FindOneOrNonePlugin.md)
- [GcpSecretProviderOptions](interfaces/GcpSecretProviderOptions.md)
- [GenerateTokensOptions](interfaces/GenerateTokensOptions.md)
- [GitHubAuthOptions](interfaces/GitHubAuthOptions.md)
- [GitHubUserFields](interfaces/GitHubUserFields.md)
- [HasSetPassword](interfaces/HasSetPassword.md)
- [HasUpsert](interfaces/HasUpsert.md)
- [HttpClientLogger](interfaces/HttpClientLogger.md)
- [InstanceActionConfig](interfaces/InstanceActionConfig.md)
- [IsArchived](interfaces/IsArchived.md)
- [IsDeleted](interfaces/IsDeleted.md)
- [JSONArray](interfaces/JSONArray.md)
- [JSONObject](interfaces/JSONObject.md)
- [JwtSessionPayload](interfaces/JwtSessionPayload.md)
- [LogContextFields](interfaces/LogContextFields.md)
- [LoggingOptions](interfaces/LoggingOptions.md)
- [MCPAuthContext](interfaces/MCPAuthContext.md)
- [MCPConfig](interfaces/MCPConfig.md)
- [MCPCustomTool](interfaces/MCPCustomTool.md)
- [MCPRegistryEntry](interfaces/MCPRegistryEntry.md)
- [MCPRequest](interfaces/MCPRequest.md)
- [MCPServerOptions](interfaces/MCPServerOptions.md)
- [MCPToolDefinition](interfaces/MCPToolDefinition.md)
- [MCPToolResult](interfaces/MCPToolResult.md)
- [ModelRouterAccessOptions](interfaces/ModelRouterAccessOptions.md)
- [ModelRouterBuildContext](interfaces/ModelRouterBuildContext.md)
- [ModelRouterOptions](interfaces/ModelRouterOptions.md)
- [ModelRouterRegistration](interfaces/ModelRouterRegistration.md)
- [ModelRouterValidationOptions](interfaces/ModelRouterValidationOptions.md)
- [MongoClientLike](interfaces/MongoClientLike.md)
- [NormalizedApiError](interfaces/NormalizedApiError.md)
- [OpenApiBuildResult](interfaces/OpenApiBuildResult.md)
- [OpenApiMiddleware](interfaces/OpenApiMiddleware.md)
- [OpenApiParameter](interfaces/OpenApiParameter.md)
- [OpenApiResponse](interfaces/OpenApiResponse.md)
- [OpenApiSchema](interfaces/OpenApiSchema.md)
- [OpenApiSchemaProperty](interfaces/OpenApiSchemaProperty.md)
- [OpenApiValidatorConfig](interfaces/OpenApiValidatorConfig.md)
- [OrganizationScopedUser](interfaces/OrganizationScopedUser.md)
- [OwnerScopeOptions](interfaces/OwnerScopeOptions.md)
- [PermissionSource](interfaces/PermissionSource.md)
- [PermissionSourceGrants](interfaces/PermissionSourceGrants.md)
- [PopulatePath](interfaces/PopulatePath.md)
- [QuerySubscription](interfaces/QuerySubscription.md)
- [QueryValidatorOptions](interfaces/QueryValidatorOptions.md)
- [RbacAuditDocument](interfaces/RbacAuditDocument.md)
- [RbacAuditWrite](interfaces/RbacAuditWrite.md)
- [RbacRoleDocument](interfaces/RbacRoleDocument.md)
- [RbacRouterOptions](interfaces/RbacRouterOptions.md)
- [RbacUser](interfaces/RbacUser.md)
- [RbacUserPluginOptions](interfaces/RbacUserPluginOptions.md)
- [RealtimeAppOptions](interfaces/RealtimeAppOptions.md)
- [RealtimeConfig](interfaces/RealtimeConfig.md)
- [RealtimeEvent](interfaces/RealtimeEvent.md)
- [RealtimeRegistryEntry](interfaces/RealtimeRegistryEntry.md)
- [RealtimeSocketLike](interfaces/RealtimeSocketLike.md)
- [RequestBodyValidatorOptions](interfaces/RequestBodyValidatorOptions.md)
- [RequestContext](interfaces/RequestContext.md)
- [ResourceFieldViews](interfaces/ResourceFieldViews.md)
- [ResourceScope](interfaces/ResourceScope.md)
- [RESTPermissions](interfaces/RESTPermissions.md)
- [RetryPolicy](interfaces/RetryPolicy.md)
- [RevalidatableSocket](interfaces/RevalidatableSocket.md)
- [RoleDefinition](interfaces/RoleDefinition.md)
- [RoleDiff](interfaces/RoleDiff.md)
- [RoleInput](interfaces/RoleInput.md)
- [RoleManager](interfaces/RoleManager.md)
- [ScopeArgs](interfaces/ScopeArgs.md)
- [ScopeDefinition](interfaces/ScopeDefinition.md)
- [ScopedLogger](interfaces/ScopedLogger.md)
- [ScriptArgDef](interfaces/ScriptArgDef.md)
- [ScriptArgs](interfaces/ScriptArgs.md)
- [ScriptContext](interfaces/ScriptContext.md)
- [ScriptResult](interfaces/ScriptResult.md)
- [SecretFieldMeta](interfaces/SecretFieldMeta.md)
- [SecretProvider](interfaces/SecretProvider.md)
- [SessionRevalidationOptions](interfaces/SessionRevalidationOptions.md)
- [SetPasswordAuditContext](interfaces/SetPasswordAuditContext.md)
- [SocketDataBag](interfaces/SocketDataBag.md)
- [SocketWithDecodedToken](interfaces/SocketWithDecodedToken.md)
- [SyncAck](interfaces/SyncAck.md)
- [SyncAppOptions](interfaces/SyncAppOptions.md)
- [SyncBatchRunResult](interfaces/SyncBatchRunResult.md)
- [SyncConfig](interfaces/SyncConfig.md)
- [SyncConsentsOptions](interfaces/SyncConsentsOptions.md)
- [SyncConsentsResult](interfaces/SyncConsentsResult.md)
- [SyncCounterDocument](interfaces/SyncCounterDocument.md)
- [SyncDelta](interfaces/SyncDelta.md)
- [SyncedDocumentFields](interfaces/SyncedDocumentFields.md)
- [SyncEntitiesResponse](interfaces/SyncEntitiesResponse.md)
- [SyncEntityPayload](interfaces/SyncEntityPayload.md)
- [SyncKeyDocument](interfaces/SyncKeyDocument.md)
- [SyncMutateBatchRequest](interfaces/SyncMutateBatchRequest.md)
- [SyncMutateBatchResponse](interfaces/SyncMutateBatchResponse.md)
- [SyncMutateRequest](interfaces/SyncMutateRequest.md)
- [SyncMutationDocument](interfaces/SyncMutationDocument.md)
- [SyncMutationRunResult](interfaces/SyncMutationRunResult.md)
- [SyncNack](interfaces/SyncNack.md)
- [SyncPendingClaim](interfaces/SyncPendingClaim.md)
- [SyncRegistryEntry](interfaces/SyncRegistryEntry.md)
- [SyncResyncHint](interfaces/SyncResyncHint.md)
- [SyncScopeBroadcast](interfaces/SyncScopeBroadcast.md)
- [SyncScopeMoveDocument](interfaces/SyncScopeMoveDocument.md)
- [SyncScopeOwner](interfaces/SyncScopeOwner.md)
- [SyncScopeTenant](interfaces/SyncScopeTenant.md)
- [SyncSeqClaim](interfaces/SyncSeqClaim.md)
- [SyncSeqConfirmResult](interfaces/SyncSeqConfirmResult.md)
- [SyncSnapshotResponse](interfaces/SyncSnapshotResponse.md)
- [SyncSocketLike](interfaces/SyncSocketLike.md)
- [SyncStreamInfo](interfaces/SyncStreamInfo.md)
- [SyncStreamsResponse](interfaces/SyncStreamsResponse.md)
- [TerrenoAccess](interfaces/TerrenoAccess.md)
- [TerrenoAppOptions](interfaces/TerrenoAppOptions.md)
- [TerrenoPlugin](interfaces/TerrenoPlugin.md)
- [TerrenoRequestLogEntry](interfaces/TerrenoRequestLogEntry.md)
- [TerrenoTransformer](interfaces/TerrenoTransformer.md)
- [User](interfaces/User.md)
- [UserModel](interfaces/UserModel.md)
- [UserPermissionDiff](interfaces/UserPermissionDiff.md)
- [VersionCheckResponse](interfaces/VersionCheckResponse.md)
- [VersionConfigDocument](interfaces/VersionConfigDocument.md)
- [VersionConfigModel](interfaces/VersionConfigModel.md)
- [WithApiErrorHandlingOptions](interfaces/WithApiErrorHandlingOptions.md)
- [WrapScriptOptions](interfaces/WrapScriptOptions.md)

## Type Aliases

- [AddRoutes](type-aliases/AddRoutes.md)
- [AdminChangeType](type-aliases/AdminChangeType.md)
- [AdminFilter](type-aliases/AdminFilter.md)
- [AdminFilterKind](type-aliases/AdminFilterKind.md)
- [AdminModelAdminMap](type-aliases/AdminModelAdminMap.md)
- [AnyTerrenoAccess](type-aliases/AnyTerrenoAccess.md)
- [ApiErrorClassification](type-aliases/ApiErrorClassification.md)
- [~~APIErrorConstructor~~](type-aliases/APIErrorConstructor.md)
- [APIErrorSubclassOptions](type-aliases/APIErrorSubclassOptions.md)
- [AuthProvider](type-aliases/AuthProvider.md)
- [AuthStrategy](type-aliases/AuthStrategy.md)
- [BetterAuthInstance](type-aliases/BetterAuthInstance.md)
- [ConfigType](type-aliases/ConfigType.md)
- [ConfigurationPostUpdateHook](type-aliases/ConfigurationPostUpdateHook.md)
- [ConfigurationPreUpdateHook](type-aliases/ConfigurationPreUpdateHook.md)
- [ConsentFormMethods](type-aliases/ConsentFormMethods.md)
- [ConsentFormType](type-aliases/ConsentFormType.md)
- [DeepPartial](type-aliases/DeepPartial.md)
- [ExecutorConcurrencyCheck](type-aliases/ExecutorConcurrencyCheck.md)
- [ExecutorDoc](type-aliases/ExecutorDoc.md)
- [GooseRESTOptions](type-aliases/GooseRESTOptions.md)
- [JSONPrimitive](type-aliases/JSONPrimitive.md)
- [JSONValue](type-aliases/JSONValue.md)
- [~~LoosePermissionRequest~~](type-aliases/LoosePermissionRequest.md)
- [MCPMethod](type-aliases/MCPMethod.md)
- [MCPToolArgs](type-aliases/MCPToolArgs.md)
- [ModelQuery](type-aliases/ModelQuery.md)
- [Paths](type-aliases/Paths.md)
- [PathValue](type-aliases/PathValue.md)
- [PermissionMethod](type-aliases/PermissionMethod.md)
- [PermissionRequest](type-aliases/PermissionRequest.md)
- [PermissionSet](type-aliases/PermissionSet.md)
- [RbacAuditSink](type-aliases/RbacAuditSink.md)
- [RbacRoleModel](type-aliases/RbacRoleModel.md)
- [RequestContextAttributes](type-aliases/RequestContextAttributes.md)
- [ResourceScopes](type-aliases/ResourceScopes.md)
- [RESTMethod](type-aliases/RESTMethod.md)
- [RevalidationOutcome](type-aliases/RevalidationOutcome.md)
- [RolePermissionSpec](type-aliases/RolePermissionSpec.md)
- [ScriptArgValue](type-aliases/ScriptArgValue.md)
- [ScriptRunner](type-aliases/ScriptRunner.md)
- [SessionRevalidationHandle](type-aliases/SessionRevalidationHandle.md)
- [SocketAuthValidator](type-aliases/SocketAuthValidator.md)
- [StaleOnFailurePolicy](type-aliases/StaleOnFailurePolicy.md)
- [Statements](type-aliases/Statements.md)
- [SyncBatchValidationOutcome](type-aliases/SyncBatchValidationOutcome.md)
- [SyncMutateBatchResult](type-aliases/SyncMutateBatchResult.md)
- [SyncMutationOperation](type-aliases/SyncMutationOperation.md)
- [SyncMutationOutcome](type-aliases/SyncMutationOutcome.md)
- [SyncMutationScopeResolver](type-aliases/SyncMutationScopeResolver.md)
- [SyncMutationStatus](type-aliases/SyncMutationStatus.md)
- [SyncNackCode](type-aliases/SyncNackCode.md)
- [SyncRunStage](type-aliases/SyncRunStage.md)
- [SyncScope](type-aliases/SyncScope.md)
- [SyncScopeResolver](type-aliases/SyncScopeResolver.md)
- [TerrenoAppAdminEvent](type-aliases/TerrenoAppAdminEvent.md)
- [VersionCheckStatus](type-aliases/VersionCheckStatus.md)

## Variables

- [ACTION\_NAME\_PATTERN](variables/ACTION_NAME_PATTERN.md)
- [BackgroundTask](variables/BackgroundTask.md)
- [Config](variables/Config.md)
- [ConsentForm](variables/ConsentForm.md)
- [ConsentResponse](variables/ConsentResponse.md)
- [consentResponsePopulatePaths](variables/consentResponsePopulatePaths.md)
- [DEFAULT\_SESSION\_REVALIDATION\_INTERVAL\_MS](variables/DEFAULT_SESSION_REVALIDATION_INTERVAL_MS.md)
- [DEFAULT\_TOMBSTONE\_RETENTION\_DAYS](variables/DEFAULT_TOMBSTONE_RETENTION_DAYS.md)
- [gooseRestRouter](variables/gooseRestRouter.md)
- [IsPermitted](variables/IsPermitted.md)
- [logger](variables/logger.md)
- [MAX\_BULK\_PATCH\_IDS](variables/MAX_BULK_PATCH_IDS.md)
- [MAX\_DOCUMENT\_SUBSCRIPTIONS](variables/MAX_DOCUMENT_SUBSCRIPTIONS.md)
- [MAX\_ENTITY\_FETCH](variables/MAX_ENTITY_FETCH.md)
- [MAX\_MODEL\_SUBSCRIPTIONS](variables/MAX_MODEL_SUBSCRIPTIONS.md)
- [MAX\_PASSWORD\_LENGTH](variables/MAX_PASSWORD_LENGTH.md)
- [MAX\_QUERY\_SUBSCRIPTIONS](variables/MAX_QUERY_SUBSCRIPTIONS.md)
- [MAX\_SYNC\_COLLECTION\_SUBSCRIPTIONS](variables/MAX_SYNC_COLLECTION_SUBSCRIPTIONS.md)
- [MAX\_SYNC\_MUTATIONS\_PER\_BATCH](variables/MAX_SYNC_MUTATIONS_PER_BATCH.md)
- [MAX\_SYNC\_MUTATIONS\_PER\_SECOND](variables/MAX_SYNC_MUTATIONS_PER_SECOND.md)
- [MAX\_SYNC\_SUBSCRIBE\_ARRAY\_LENGTH](variables/MAX_SYNC_SUBSCRIBE_ARRAY_LENGTH.md)
- [PENDING\_CLAIM\_LEASE\_MS](variables/PENDING_CLAIM_LEASE_MS.md)
- [Permissions](variables/Permissions.md)
- [PRIVILEGED\_USER\_FIELDS](variables/PRIVILEGED_USER_FIELDS.md)
- [READ\_ACTIONS](variables/READ_ACTIONS.md)
- [READ\_ONLY\_ROLE\_PERMISSIONS](variables/READ_ONLY_ROLE_PERMISSIONS.md)
- [REQUEST\_CONTEXT\_ATTRIBUTE\_NAMES](variables/REQUEST_CONTEXT_ATTRIBUTE_NAMES.md)
- [requireAccess](variables/requireAccess.md)
- [SCOPE\_MOVE\_MARKER\_ATTEMPTS](variables/SCOPE_MOVE_MARKER_ATTEMPTS.md)
- [SYNC\_MUTATION\_LEASE\_MS](variables/SYNC_MUTATION_LEASE_MS.md)
- [SyncCounter](variables/SyncCounter.md)
- [SyncKey](variables/SyncKey.md)
- [SyncMutation](variables/SyncMutation.md)
- [SyncScopeMove](variables/SyncScopeMove.md)
- [terrenoDefaultRoles](variables/terrenoDefaultRoles.md)
- [terrenoStatements](variables/terrenoStatements.md)
- [VersionConfig](variables/VersionConfig.md)
- [winstonLogger](variables/winstonLogger.md)

## Functions

- [addAuthRoutes](functions/addAuthRoutes.md)
- [addGitHubAuthRoutes](functions/addGitHubAuthRoutes.md)
- [addMeRoutes](functions/addMeRoutes.md)
- [addPopulateToQuery](functions/addPopulateToQuery.md)
- [addQuerySubscription](functions/addQuerySubscription.md)
- [addSyncRoutes](functions/addSyncRoutes.md)
- [adminBodyFieldsToStrip](functions/adminBodyFieldsToStrip.md)
- [AdminOwnerTransformer](functions/AdminOwnerTransformer.md)
- [apiErrorMiddleware](functions/apiErrorMiddleware.md)
- [apiFallthroughErrorMiddleware](functions/apiFallthroughErrorMiddleware.md)
- [apiUnauthorizedMiddleware](functions/apiUnauthorizedMiddleware.md)
- [applyReadMask](functions/applyReadMask.md)
- [applyRequestContextToSentry](functions/applyRequestContextToSentry.md)
- [applySyncMutation](functions/applySyncMutation.md)
- [applySyncMutationBatch](functions/applySyncMutationBatch.md)
- [assertNoActionCollisions](functions/assertNoActionCollisions.md)
- [assertWritableStream](functions/assertWritableStream.md)
- [asyncHandler](functions/asyncHandler.md)
- [authenticateMiddleware](functions/authenticateMiddleware.md)
- [backfillAdmins](functions/backfillAdmins.md)
- [baseUserPlugin](functions/baseUserPlugin.md)
- [buildQuerySchemaFromFields](functions/buildQuerySchemaFromFields.md)
- [buildSnapshotScopeFilter](functions/buildSnapshotScopeFilter.md)
- [checkModelsStrict](functions/checkModelsStrict.md)
- [checkPermissions](functions/checkPermissions.md)
- [claimSyncSeqs](functions/claimSyncSeqs.md)
- [clearMCPRegistry](functions/clearMCPRegistry.md)
- [clearQueryStore](functions/clearQueryStore.md)
- [clearRealtimeRegistry](functions/clearRealtimeRegistry.md)
- [clearSyncRegistry](functions/clearSyncRegistry.md)
- [compactEntryTombstones](functions/compactEntryTombstones.md)
- [compactTombstones](functions/compactTombstones.md)
- [computeQueryId](functions/computeQueryId.md)
- [computeStableFrontier](functions/computeStableFrontier.md)
- [configurationPlugin](functions/configurationPlugin.md)
- [configureOpenApiValidator](functions/configureOpenApiValidator.md)
- [confirmSyncSeqs](functions/confirmSyncSeqs.md)
- [createAccess](functions/createAccess.md)
- [createActionOpenApiMiddleware](functions/createActionOpenApiMiddleware.md)
- [createAuthenticatedClient](functions/createAuthenticatedClient.md)
- [createBetterAuth](functions/createBetterAuth.md)
- [createBetterAuthSessionMiddleware](functions/createBetterAuthSessionMiddleware.md)
- [createBetterAuthValidator](functions/createBetterAuthValidator.md)
- [createdUpdatedPlugin](functions/createdUpdatedPlugin.md)
- [createFeatureFlaggedLogger](functions/createFeatureFlaggedLogger.md)
- [createIsPermitted](functions/createIsPermitted.md)
- [createLegacyJwtValidator](functions/createLegacyJwtValidator.md)
- [createModelValidators](functions/createModelValidators.md)
- [createOpenApiBuilder](functions/createOpenApiBuilder.md)
- [createRbacAuditModel](functions/createRbacAuditModel.md)
- [createRbacRoleModel](functions/createRbacRoleModel.md)
- [createRequireAccess](functions/createRequireAccess.md)
- [createRouter](functions/createRouter.md)
- [createRouterWithAuth](functions/createRouterWithAuth.md)
- [createScopedLogger](functions/createScopedLogger.md)
- [createScriptArgs](functions/createScriptArgs.md)
- [createSocketAuthMiddleware](functions/createSocketAuthMiddleware.md)
- [createValidator](functions/createValidator.md)
- [cronjob](functions/cronjob.md)
- [defaultResponseHandler](functions/defaultResponseHandler.md)
- [defineCollectionAction](functions/defineCollectionAction.md)
- [defineInstanceAction](functions/defineInstanceAction.md)
- [defineScope](functions/defineScope.md)
- [diffPermissionSets](functions/diffPermissionSets.md)
- [emitPayloadToAuthorizedRoom](functions/emitPayloadToAuthorizedRoom.md)
- [emitSyncDeltaForChange](functions/emitSyncDeltaForChange.md)
- [ensureSyncIndexes](functions/ensureSyncIndexes.md)
- [ensureSyncModelIndexes](functions/ensureSyncModelIndexes.md)
- [envConfigurationPlugin](functions/envConfigurationPlugin.md)
- [errorDetail](functions/errorDetail.md)
- [errorMessage](functions/errorMessage.md)
- [errorsPlugin](functions/errorsPlugin.md)
- [errorStack](functions/errorStack.md)
- [evictExpiredSyncMutationWindows](functions/evictExpiredSyncMutationWindows.md)
- [excludeArchivedPlugin](functions/excludeArchivedPlugin.md)
- [executeCreate](functions/executeCreate.md)
- [executeDelete](functions/executeDelete.md)
- [executeUpdate](functions/executeUpdate.md)
- [expandRolePermissions](functions/expandRolePermissions.md)
- [extractUserFromHeaders](functions/extractUserFromHeaders.md)
- [findExactlyOne](functions/findExactlyOne.md)
- [findOneOrNone](functions/findOneOrNone.md)
- [findOneOrNoneFor](functions/findOneOrNoneFor.md)
- [findRegistryEntryByCollection](functions/findRegistryEntryByCollection.md)
- [findRegistryEntryByRoutePath](functions/findRegistryEntryByRoutePath.md)
- [findSyncEntryByCollectionName](functions/findSyncEntryByCollectionName.md)
- [findSyncEntryByCollectionTag](functions/findSyncEntryByCollectionTag.md)
- [findSyncEntryByModelName](functions/findSyncEntryByModelName.md)
- [firebaseJWTPlugin](functions/firebaseJWTPlugin.md)
- [fixMixedFields](functions/fixMixedFields.md)
- [flattenToDotPaths](functions/flattenToDotPaths.md)
- [formatLogContextSuffix](functions/formatLogContextSuffix.md)
- [generateAllTools](functions/generateAllTools.md)
- [generateInputSchema](functions/generateInputSchema.md)
- [generateTokens](functions/generateTokens.md)
- [generateToolDescription](functions/generateToolDescription.md)
- [generateToolsForEntry](functions/generateToolsForEntry.md)
- [getAllMCPTools](functions/getAllMCPTools.md)
- [~~getAPIErrorBody~~](functions/getAPIErrorBody.md)
- [getBetterAuthSession](functions/getBetterAuthSession.md)
- [getCompactedThroughSeq](functions/getCompactedThroughSeq.md)
- [getCurrentLogContext](functions/getCurrentLogContext.md)
- [getCurrentRequestContext](functions/getCurrentRequestContext.md)
- [getCurrentRequestContextAttributes](functions/getCurrentRequestContextAttributes.md)
- [getDisableExternalErrorTracking](functions/getDisableExternalErrorTracking.md)
- [getDisallowedWriteKeys](functions/getDisallowedWriteKeys.md)
- [getMCPRegistry](functions/getMCPRegistry.md)
- [getMongoClientFromMongoose](functions/getMongoClientFromMongoose.md)
- [getOpenApiSpecForModel](functions/getOpenApiSpecForModel.md)
- [getOpenApiValidatorConfig](functions/getOpenApiValidatorConfig.md)
- [getOrCreateSyncKeyMaterial](functions/getOrCreateSyncKeyMaterial.md)
- [getQuerySubscriptionsForCollection](functions/getQuerySubscriptionsForCollection.md)
- [getRealtimeRegistry](functions/getRealtimeRegistry.md)
- [getRequestContextFromAttributes](functions/getRequestContextFromAttributes.md)
- [getSchemaFromModel](functions/getSchemaFromModel.md)
- [getScopeField](functions/getScopeField.md)
- [getSessionIdFromJwtPayload](functions/getSessionIdFromJwtPayload.md)
- [getSocketUser](functions/getSocketUser.md)
- [getSyncAppOptions](functions/getSyncAppOptions.md)
- [getSyncRegistry](functions/getSyncRegistry.md)
- [getUserOrganizationIds](functions/getUserOrganizationIds.md)
- [githubUserPlugin](functions/githubUserPlugin.md)
- [hasBetterAuthSession](functions/hasBetterAuthSession.md)
- [installRealtimeSocketHandlers](functions/installRealtimeSocketHandlers.md)
- [installSyncSocketHandlers](functions/installSyncSocketHandlers.md)
- [isAPIError](functions/isAPIError.md)
- [isDeletedPlugin](functions/isDeletedPlugin.md)
- [isDisabledPlugin](functions/isDisabledPlugin.md)
- [isExecutorConflictError](functions/isExecutorConflictError.md)
- [isOpenApiValidatorConfigured](functions/isOpenApiValidatorConfigured.md)
- [isPermissionSubset](functions/isPermissionSubset.md)
- [isValidObjectId](functions/isValidObjectId.md)
- [isVersionError](functions/isVersionError.md)
- [jsonResponseRequestIdMiddleware](functions/jsonResponseRequestIdMiddleware.md)
- [loadFullUserForSocket](functions/loadFullUserForSocket.md)
- [logRequests](functions/logRequests.md)
- [markRetryUnsafe](functions/markRetryUnsafe.md)
- [matchesQuery](functions/matchesQuery.md)
- [mergeStatements](functions/mergeStatements.md)
- [modelRouter](functions/modelRouter.md)
- [mongooseErrorToAPIError](functions/mongooseErrorToAPIError.md)
- [mountBetterAuthRoutes](functions/mountBetterAuthRoutes.md)
- [mountMCPServer](functions/mountMCPServer.md)
- [normalizeApiError](functions/normalizeApiError.md)
- [omitUserRolesFromWriteBody](functions/omitUserRolesFromWriteBody.md)
- [openApiCompatMiddleware](functions/openApiCompatMiddleware.md)
- [openApiEtagMiddleware](functions/openApiEtagMiddleware.md)
- [OrganizationQueryFilter](functions/OrganizationQueryFilter.md)
- [OwnerQueryFilter](functions/OwnerQueryFilter.md)
- [OwnerScope](functions/OwnerScope.md)
- [parseScriptArgs](functions/parseScriptArgs.md)
- [parseStreamKey](functions/parseStreamKey.md)
- [passthroughOrWrap](functions/passthroughOrWrap.md)
- [passthroughOrWrapWrite](functions/passthroughOrWrapWrite.md)
- [patchAppUse](functions/patchAppUse.md)
- [patchExpressRouterUse](functions/patchExpressRouterUse.md)
- [permissionMiddleware](functions/permissionMiddleware.md)
- [rbacRouter](functions/rbacRouter.md)
- [rbacUserPlugin](functions/rbacUserPlugin.md)
- [recordCompactedThroughSeq](functions/recordCompactedThroughSeq.md)
- [recordRbacAudit](functions/recordRbacAudit.md)
- [registerActionRoutes](functions/registerActionRoutes.md)
- [registerMCPModel](functions/registerMCPModel.md)
- [registerMCPTool](functions/registerMCPTool.md)
- [registerRealtime](functions/registerRealtime.md)
- [registerSync](functions/registerSync.md)
- [releaseSyncSeqs](functions/releaseSyncSeqs.md)
- [removeAllSocketQueries](functions/removeAllSocketQueries.md)
- [removeQuerySubscription](functions/removeQuerySubscription.md)
- [requestContextMiddleware](functions/requestContextMiddleware.md)
- [requireAdminMiddleware](functions/requireAdminMiddleware.md)
- [reresolveSyncRoomsForSocket](functions/reresolveSyncRoomsForSocket.md)
- [resetOpenApiValidatorConfig](functions/resetOpenApiValidatorConfig.md)
- [resetSyncMutationRateLimits](functions/resetSyncMutationRateLimits.md)
- [resolveStreamForDoc](functions/resolveStreamForDoc.md)
- [resolveUserStreamsForEntry](functions/resolveUserStreamsForEntry.md)
- [revalidateSocketSession](functions/revalidateSocketSession.md)
- [runActionPermissions](functions/runActionPermissions.md)
- [runPostCreate](functions/runPostCreate.md)
- [runPostDelete](functions/runPostDelete.md)
- [runPostUpdate](functions/runPostUpdate.md)
- [runSessionRevalidationSweep](functions/runSessionRevalidationSweep.md)
- [runSyncBatch](functions/runSyncBatch.md)
- [runSyncMutation](functions/runSyncMutation.md)
- [runWithRequestContext](functions/runWithRequestContext.md)
- [runWithRequestContextAttributes](functions/runWithRequestContextAttributes.md)
- [scrubAdminFields](functions/scrubAdminFields.md)
- [sendToGoogleChat](functions/sendToGoogleChat.md)
- [sendToSlack](functions/sendToSlack.md)
- [sendToZoom](functions/sendToZoom.md)
- [sentryAppVersionMiddleware](functions/sentryAppVersionMiddleware.md)
- [serialize](functions/serialize.md)
- [serializeSyncDoc](functions/serializeSyncDoc.md)
- [serializeSyncPayload](functions/serializeSyncPayload.md)
- [setPasswordForUser](functions/setPasswordForUser.md)
- [setRequestContext](functions/setRequestContext.md)
- [setupAuth](functions/setupAuth.md)
- [setupBetterAuthUserSync](functions/setupBetterAuthUserSync.md)
- [setupEnvironment](functions/setupEnvironment.md)
- [setupGitHubAuth](functions/setupGitHubAuth.md)
- [setupLogging](functions/setupLogging.md)
- [signupUser](functions/signupUser.md)
- [startChangeStreamWatcher](functions/startChangeStreamWatcher.md)
- [startSessionRevalidationSweep](functions/startSessionRevalidationSweep.md)
- [stopChangeStreamWatcher](functions/stopChangeStreamWatcher.md)
- [streamForScopeValue](functions/streamForScopeValue.md)
- [stripAdminBodyFields](functions/stripAdminBodyFields.md)
- [stripPrivilegedUserFields](functions/stripPrivilegedUserFields.md)
- [syncBetterAuthUser](functions/syncBetterAuthUser.md)
- [syncConsents](functions/syncConsents.md)
- [syncMutationRateLimitWindowCount](functions/syncMutationRateLimitWindowCount.md)
- [syncPlugin](functions/syncPlugin.md)
- [syncRoomForStream](functions/syncRoomForStream.md)
- [timeout](functions/timeout.md)
- [trackSyncIndexCreation](functions/trackSyncIndexCreation.md)
- [transform](functions/transform.md)
- [unionPermissionSets](functions/unionPermissionSets.md)
- [unpopulate](functions/unpopulate.md)
- [updateMCPRegistryOptions](functions/updateMCPRegistryOptions.md)
- [updateRealtimeRegistryOptions](functions/updateRealtimeRegistryOptions.md)
- [updateRequestContextFromRequest](functions/updateRequestContextFromRequest.md)
- [updateSyncRegistryOptions](functions/updateSyncRegistryOptions.md)
- [upsertPlugin](functions/upsertPlugin.md)
- [validateActionRequest](functions/validateActionRequest.md)
- [validateModelRequestBody](functions/validateModelRequestBody.md)
- [validatePermissionSet](functions/validatePermissionSet.md)
- [validateQueryParams](functions/validateQueryParams.md)
- [validateRequestBody](functions/validateRequestBody.md)
- [validateResponseData](functions/validateResponseData.md)
- [validateSyncMutationBatch](functions/validateSyncMutationBatch.md)
- [warnOnSyncScopesWithoutUserModel](functions/warnOnSyncScopesWithoutUserModel.md)
- [withApiErrorHandling](functions/withApiErrorHandling.md)
- [wrapActionResponse](functions/wrapActionResponse.md)
- [wrapScript](functions/wrapScript.md)

## References

### MAX\_SYNC\_HTTP\_MUTATIONS\_PER\_SECOND

Renames and re-exports [MAX_SYNC_MUTATIONS_PER_SECOND](variables/MAX_SYNC_MUTATIONS_PER_SECOND.md)
